name:           postgres-targeted-export
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/CollegeVine/postgres-targeted-export#readme>
homepage:       https://github.com/CollegeVine/postgres-targeted-export#readme
bug-reports:    https://github.com/CollegeVine/postgres-targeted-export/issues
author:         Chris Coffey
maintainer:     chris@collegevine.com
copyright:      2018 Chris Coffey
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/CollegeVine/postgres-targeted-export

executable pg-export
  main-is: Main.hs
  default-extensions: DuplicateRecordFields NamedFieldPuns OverloadedStrings
                      DeriveAnyClass GADTs TypeFamilies DeriveGeneric
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , yaml
    , transformers
    , mtl
    , text
    , bytestring
    , aeson
    , containers
    , time
    , postgresql-simple
  other-modules:
      Export.SQL,
      Export.JSON,
      Internal.Rep,
      Internal.Config,
      Import.Database
  default-language: Haskell2010

test-suite postgres-targeted-export-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , postgres-targeted-export
  other-modules:
      Paths_database_export
  default-language: Haskell2010
